# django_for_begginers

./: .gitignore  README.md  create_django_project.py
Chapter 1/: install_poetry.sh  manage.py  pyproject.toml
Chapter 1/project_config/: settings.py
Chapter 13/: pyproject.toml
Chapter 13/accounts/: admin.py  forms.py  urls.py  views.py
Chapter 13/articles/: admin.py  models.py  urls.py  views.py
Chapter 13/config/: settings.py  urls.py
Chapter 13/templates/: base.html  home_page.html
Chapter 14/: pyproject.toml
Chapter 14/articles/: views.py
Chapter 15/: pyproject.toml
Chapter 15/accounts/: models.py  urls.py
Chapter 15/articles/: admin.py  models.py  views.py
Chapter 2/: pyproject.toml
Chapter 3 - custom templates folder location/: pyproject.toml
Chapter 3 - custom templates folder location/config/: settings.py
Chapter 3 - custom templates folder location/pages/: tests.py  urls.py  views.py
Chapter 3 - custom templates folder location/templates/: about_me.html  base.html  hello_world.html
Chapter 3 - default template folder location/pages/: views.py
Chapter 3 - default templates folder location/: pyproject.toml
Chapter 3/config/: settings.py
Chapter 4/: pyproject.toml
Chapter 4/config/: settings.py
Chapter 4/posts/: models.py  tests.py  urls.py  views.py
Chapter 4/posts/migrations/: 0001_initial.py  0002_post_title.py  0003_post_populate.py
Chapter 4/templates/: posts.html
Chapter 5/: pyproject.toml
Chapter 6/: pyproject.toml
Chapter 7/: pyproject.toml
Chapter 8/: pyproject.toml
Chapter 9/: pyproject.toml
(+79 files in other folders)
