[tool.poetry]
name = "chapter 4"
version = "0.1.0"
description = ""
authors = ["KubaTaba1uga <jakub@buczynski.net.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
